Kaggle Notebook | Zoo Animal Classification | Version 5

--- a/zoo-animal-classification.ipynb
+++ b/zoo-animal-classification.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bc76b2b2",
+   "id": "88ea1691",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-04-02T16:30:35.313561Z",
-     "iopub.status.busy": "2023-04-02T16:30:35.313075Z",
-     "iopub.status.idle": "2023-04-02T16:30:36.727095Z",
-     "shell.execute_reply": "2023-04-02T16:30:36.725742Z"
+     "iopub.execute_input": "2023-04-02T16:52:18.773682Z",
+     "iopub.status.busy": "2023-04-02T16:52:18.772774Z",
+     "iopub.status.idle": "2023-04-02T16:52:20.267227Z",
+     "shell.execute_reply": "2023-04-02T16:52:20.265981Z"
     },
     "papermill": {
-     "duration": 1.422305,
-     "end_time": "2023-04-02T16:30:36.730566",
+     "duration": 1.502708,
+     "end_time": "2023-04-02T16:52:20.270242",
      "exception": false,
-     "start_time": "2023-04-02T16:30:35.308261",
+     "start_time": "2023-04-02T16:52:18.767534",
      "status": "completed"
     },
     "tags": []
@@ -52,44 +52,45 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5588c03f",
+   "id": "179a6a71",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-02T16:30:36.737360Z",
-     "iopub.status.busy": "2023-04-02T16:30:36.736938Z",
-     "iopub.status.idle": "2023-04-02T16:30:36.755740Z",
-     "shell.execute_reply": "2023-04-02T16:30:36.754570Z"
+     "iopub.execute_input": "2023-04-02T16:52:20.276765Z",
+     "iopub.status.busy": "2023-04-02T16:52:20.276340Z",
+     "iopub.status.idle": "2023-04-02T16:52:20.295060Z",
+     "shell.execute_reply": "2023-04-02T16:52:20.293819Z"
     },
     "papermill": {
-     "duration": 0.025595,
-     "end_time": "2023-04-02T16:30:36.758811",
+     "duration": 0.025341,
+     "end_time": "2023-04-02T16:52:20.297994",
      "exception": false,
-     "start_time": "2023-04-02T16:30:36.733216",
+     "start_time": "2023-04-02T16:52:20.272653",
      "status": "completed"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/kaggle/input/zoo-animal-classification/zoo.csv\")"
+    "train_df = pd.read_csv(\"/kaggle/input/zoo-animal-classification/class.csv\")\n",
+    "test_df = pd.read_csv(\"/kaggle/input/zoo-animal-classification/zoo.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e0583a2b",
+   "id": "493e84c3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-02T16:30:36.765584Z",
-     "iopub.status.busy": "2023-04-02T16:30:36.764793Z",
-     "iopub.status.idle": "2023-04-02T16:30:36.791442Z",
-     "shell.execute_reply": "2023-04-02T16:30:36.790220Z"
+     "iopub.execute_input": "2023-04-02T16:52:20.304032Z",
+     "iopub.status.busy": "2023-04-02T16:52:20.303608Z",
+     "iopub.status.idle": "2023-04-02T16:52:20.340961Z",
+     "shell.execute_reply": "2023-04-02T16:52:20.339398Z"
     },
     "papermill": {
-     "duration": 0.033252,
-     "end_time": "2023-04-02T16:30:36.794423",
+     "duration": 0.043683,
+     "end_time": "2023-04-02T16:52:20.343937",
      "exception": false,
-     "start_time": "2023-04-02T16:30:36.761171",
+     "start_time": "2023-04-02T16:52:20.300254",
      "status": "completed"
     },
     "tags": []
@@ -99,6 +100,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 7 entries, 0 to 6\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column                             Non-Null Count  Dtype \n",
+      "---  ------                             --------------  ----- \n",
+      " 0   Class_Number                       7 non-null      int64 \n",
+      " 1   Number_Of_Animal_Species_In_Class  7 non-null      int64 \n",
+      " 2   Class_Type                         7 non-null      object\n",
+      " 3   Animal_Names                       7 non-null      object\n",
+      "dtypes: int64(2), object(2)\n",
+      "memory usage: 352.0+ bytes\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 101 entries, 0 to 100\n",
       "Data columns (total 18 columns):\n",
@@ -128,25 +140,26 @@
     }
    ],
    "source": [
-    "df.info()"
+    "train_df.info()\n",
+    "test_df.info()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "309d89bc",
+   "id": "37972888",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-02T16:30:36.800764Z",
-     "iopub.status.busy": "2023-04-02T16:30:36.800358Z",
-     "iopub.status.idle": "2023-04-02T16:30:36.834075Z",
-     "shell.execute_reply": "2023-04-02T16:30:36.832861Z"
+     "iopub.execute_input": "2023-04-02T16:52:20.351132Z",
+     "iopub.status.busy": "2023-04-02T16:52:20.350760Z",
+     "iopub.status.idle": "2023-04-02T16:52:20.381047Z",
+     "shell.execute_reply": "2023-04-02T16:52:20.379724Z"
     },
     "papermill": {
-     "duration": 0.040129,
-     "end_time": "2023-04-02T16:30:36.836881",
+     "duration": 0.03639,
+     "end_time": "2023-04-02T16:52:20.383655",
      "exception": false,
-     "start_time": "2023-04-02T16:30:36.796752",
+     "start_time": "2023-04-02T16:52:20.347265",
      "status": "completed"
     },
     "tags": []
@@ -404,286 +417,46 @@
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>cheetah</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>chicken</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>chub</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>clam</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>crab</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>crayfish</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>crow</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>deer</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>dogfish</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>dolphin</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   animal_name  hair  feathers  eggs  milk  airborne  aquatic  predator  \\\n",
-       "0     aardvark     1         0     0     1         0        0         1   \n",
-       "1     antelope     1         0     0     1         0        0         0   \n",
-       "2         bass     0         0     1     0         0        1         1   \n",
-       "3         bear     1         0     0     1         0        0         1   \n",
-       "4         boar     1         0     0     1         0        0         1   \n",
-       "5      buffalo     1         0     0     1         0        0         0   \n",
-       "6         calf     1         0     0     1         0        0         0   \n",
-       "7         carp     0         0     1     0         0        1         0   \n",
-       "8      catfish     0         0     1     0         0        1         1   \n",
-       "9         cavy     1         0     0     1         0        0         0   \n",
-       "10     cheetah     1         0     0     1         0        0         1   \n",
-       "11     chicken     0         1     1     0         1        0         0   \n",
-       "12        chub     0         0     1     0         0        1         1   \n",
-       "13        clam     0         0     1     0         0        0         1   \n",
-       "14        crab     0         0     1     0         0        1         1   \n",
-       "15    crayfish     0         0     1     0         0        1         1   \n",
-       "16        crow     0         1     1     0         1        0         1   \n",
-       "17        deer     1         0     0     1         0        0         0   \n",
-       "18     dogfish     0         0     1     0         0        1         1   \n",
-       "19     dolphin     0         0     0     1         0        1         1   \n",
+       "  animal_name  hair  feathers  eggs  milk  airborne  aquatic  predator  \\\n",
+       "0    aardvark     1         0     0     1         0        0         1   \n",
+       "1    antelope     1         0     0     1         0        0         0   \n",
+       "2        bass     0         0     1     0         0        1         1   \n",
+       "3        bear     1         0     0     1         0        0         1   \n",
+       "4        boar     1         0     0     1         0        0         1   \n",
+       "5     buffalo     1         0     0     1         0        0         0   \n",
+       "6        calf     1         0     0     1         0        0         0   \n",
+       "7        carp     0         0     1     0         0        1         0   \n",
+       "8     catfish     0         0     1     0         0        1         1   \n",
+       "9        cavy     1         0     0     1         0        0         0   \n",
        "\n",
-       "    toothed  backbone  breathes  venomous  fins  legs  tail  domestic  \\\n",
-       "0         1         1         1         0     0     4     0         0   \n",
-       "1         1         1         1         0     0     4     1         0   \n",
-       "2         1         1         0         0     1     0     1         0   \n",
-       "3         1         1         1         0     0     4     0         0   \n",
-       "4         1         1         1         0     0     4     1         0   \n",
-       "5         1         1         1         0     0     4     1         0   \n",
-       "6         1         1         1         0     0     4     1         1   \n",
-       "7         1         1         0         0     1     0     1         1   \n",
-       "8         1         1         0         0     1     0     1         0   \n",
-       "9         1         1         1         0     0     4     0         1   \n",
-       "10        1         1         1         0     0     4     1         0   \n",
-       "11        0         1         1         0     0     2     1         1   \n",
-       "12        1         1         0         0     1     0     1         0   \n",
-       "13        0         0         0         0     0     0     0         0   \n",
-       "14        0         0         0         0     0     4     0         0   \n",
-       "15        0         0         0         0     0     6     0         0   \n",
-       "16        0         1         1         0     0     2     1         0   \n",
-       "17        1         1         1         0     0     4     1         0   \n",
-       "18        1         1         0         0     1     0     1         0   \n",
-       "19        1         1         1         0     1     0     1         0   \n",
+       "   toothed  backbone  breathes  venomous  fins  legs  tail  domestic  catsize  \\\n",
+       "0        1         1         1         0     0     4     0         0        1   \n",
+       "1        1         1         1         0     0     4     1         0        1   \n",
+       "2        1         1         0         0     1     0     1         0        0   \n",
+       "3        1         1         1         0     0     4     0         0        1   \n",
+       "4        1         1         1         0     0     4     1         0        1   \n",
+       "5        1         1         1         0     0     4     1         0        1   \n",
+       "6        1         1         1         0     0     4     1         1        1   \n",
+       "7        1         1         0         0     1     0     1         1        0   \n",
+       "8        1         1         0         0     1     0     1         0        0   \n",
+       "9        1         1         1         0     0     4     0         1        0   \n",
        "\n",
-       "    catsize  class_type  \n",
-       "0         1           1  \n",
-       "1         1           1  \n",
-       "2         0           4  \n",
-       "3         1           1  \n",
-       "4         1           1  \n",
-       "5         1           1  \n",
-       "6         1           1  \n",
-       "7         0           4  \n",
-       "8         0           4  \n",
-       "9         0           1  \n",
-       "10        1           1  \n",
-       "11        0           2  \n",
-       "12        0           4  \n",
-       "13        0           7  \n",
-       "14        0           7  \n",
-       "15        0           7  \n",
-       "16        0           2  \n",
-       "17        1           1  \n",
-       "18        1           4  \n",
-       "19        1           1  "
+       "   class_type  \n",
+       "0           1  \n",
+       "1           1  \n",
+       "2           4  \n",
+       "3           1  \n",
+       "4           1  \n",
+       "5           1  \n",
+       "6           1  \n",
+       "7           4  \n",
+       "8           4  \n",
+       "9           1  "
       ]
      },
      "execution_count": 4,
@@ -692,7 +465,8 @@
     }
    ],
    "source": [
-    "df.head(20)"
+    "train_df.head(10)\n",
+    "test_df.head(10)"
    ]
   }
  ],
@@ -716,14 +490,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.486477,
-   "end_time": "2023-04-02T16:30:37.663837",
+   "duration": 12.602924,
+   "end_time": "2023-04-02T16:52:21.209253",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-04-02T16:30:25.177360",
+   "start_time": "2023-04-02T16:52:08.606329",
    "version": "2.4.0"
   }
  },
