Kaggle Notebook | Zoo Animal Classification | Version 6

--- a/zoo-animal-classification.ipynb
+++ b/zoo-animal-classification.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "88ea1691",
+   "id": "5e6bd1d6",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2023-04-02T16:52:18.773682Z",
-     "iopub.status.busy": "2023-04-02T16:52:18.772774Z",
-     "iopub.status.idle": "2023-04-02T16:52:20.267227Z",
-     "shell.execute_reply": "2023-04-02T16:52:20.265981Z"
+     "iopub.execute_input": "2023-04-02T17:39:29.602457Z",
+     "iopub.status.busy": "2023-04-02T17:39:29.602014Z",
+     "iopub.status.idle": "2023-04-02T17:39:31.206167Z",
+     "shell.execute_reply": "2023-04-02T17:39:31.204653Z"
     },
     "papermill": {
-     "duration": 1.502708,
-     "end_time": "2023-04-02T16:52:20.270242",
+     "duration": 1.613904,
+     "end_time": "2023-04-02T17:39:31.209517",
      "exception": false,
-     "start_time": "2023-04-02T16:52:18.767534",
+     "start_time": "2023-04-02T17:39:29.595613",
      "status": "completed"
     },
     "tags": []
@@ -52,19 +52,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "179a6a71",
+   "id": "172488cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-02T16:52:20.276765Z",
-     "iopub.status.busy": "2023-04-02T16:52:20.276340Z",
-     "iopub.status.idle": "2023-04-02T16:52:20.295060Z",
-     "shell.execute_reply": "2023-04-02T16:52:20.293819Z"
+     "iopub.execute_input": "2023-04-02T17:39:31.218710Z",
+     "iopub.status.busy": "2023-04-02T17:39:31.218237Z",
+     "iopub.status.idle": "2023-04-02T17:39:31.248615Z",
+     "shell.execute_reply": "2023-04-02T17:39:31.247533Z"
     },
     "papermill": {
-     "duration": 0.025341,
-     "end_time": "2023-04-02T16:52:20.297994",
+     "duration": 0.038301,
+     "end_time": "2023-04-02T17:39:31.251466",
      "exception": false,
-     "start_time": "2023-04-02T16:52:20.272653",
+     "start_time": "2023-04-02T17:39:31.213165",
      "status": "completed"
     },
     "tags": []
@@ -78,19 +78,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "493e84c3",
+   "id": "79926f32",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-02T16:52:20.304032Z",
-     "iopub.status.busy": "2023-04-02T16:52:20.303608Z",
-     "iopub.status.idle": "2023-04-02T16:52:20.340961Z",
-     "shell.execute_reply": "2023-04-02T16:52:20.339398Z"
+     "iopub.execute_input": "2023-04-02T17:39:31.260590Z",
+     "iopub.status.busy": "2023-04-02T17:39:31.259905Z",
+     "iopub.status.idle": "2023-04-02T17:39:31.288943Z",
+     "shell.execute_reply": "2023-04-02T17:39:31.287413Z"
     },
     "papermill": {
-     "duration": 0.043683,
-     "end_time": "2023-04-02T16:52:20.343937",
+     "duration": 0.036918,
+     "end_time": "2023-04-02T17:39:31.291904",
      "exception": false,
-     "start_time": "2023-04-02T16:52:20.300254",
+     "start_time": "2023-04-02T17:39:31.254986",
      "status": "completed"
     },
     "tags": []
@@ -110,7 +110,39 @@
       " 2   Class_Type                         7 non-null      object\n",
       " 3   Animal_Names                       7 non-null      object\n",
       "dtypes: int64(2), object(2)\n",
-      "memory usage: 352.0+ bytes\n",
+      "memory usage: 352.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2e1b9d6e",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-02T17:39:31.300898Z",
+     "iopub.status.busy": "2023-04-02T17:39:31.300400Z",
+     "iopub.status.idle": "2023-04-02T17:39:31.316357Z",
+     "shell.execute_reply": "2023-04-02T17:39:31.314791Z"
+    },
+    "papermill": {
+     "duration": 0.024439,
+     "end_time": "2023-04-02T17:39:31.319921",
+     "exception": false,
+     "start_time": "2023-04-02T17:39:31.295482",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 101 entries, 0 to 100\n",
       "Data columns (total 18 columns):\n",
@@ -140,26 +172,156 @@
     }
    ],
    "source": [
-    "train_df.info()\n",
     "test_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "37972888",
+   "execution_count": 5,
+   "id": "19ce17ce",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-04-02T16:52:20.351132Z",
-     "iopub.status.busy": "2023-04-02T16:52:20.350760Z",
-     "iopub.status.idle": "2023-04-02T16:52:20.381047Z",
-     "shell.execute_reply": "2023-04-02T16:52:20.379724Z"
+     "iopub.execute_input": "2023-04-02T17:39:31.329679Z",
+     "iopub.status.busy": "2023-04-02T17:39:31.329217Z",
+     "iopub.status.idle": "2023-04-02T17:39:31.356356Z",
+     "shell.execute_reply": "2023-04-02T17:39:31.355428Z"
     },
     "papermill": {
-     "duration": 0.03639,
-     "end_time": "2023-04-02T16:52:20.383655",
+     "duration": 0.034957,
+     "end_time": "2023-04-02T17:39:31.358616",
      "exception": false,
-     "start_time": "2023-04-02T16:52:20.347265",
+     "start_time": "2023-04-02T17:39:31.323659",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Class_Number</th>\n",
+       "      <th>Number_Of_Animal_Species_In_Class</th>\n",
+       "      <th>Class_Type</th>\n",
+       "      <th>Animal_Names</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>41</td>\n",
+       "      <td>Mammal</td>\n",
+       "      <td>aardvark, antelope, bear, boar, buffalo, calf,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Bird</td>\n",
+       "      <td>chicken, crow, dove, duck, flamingo, gull, haw...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Reptile</td>\n",
+       "      <td>pitviper, seasnake, slowworm, tortoise, tuatara</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Fish</td>\n",
+       "      <td>bass, carp, catfish, chub, dogfish, haddock, h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Amphibian</td>\n",
+       "      <td>frog, frog, newt, toad</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Bug</td>\n",
+       "      <td>flea, gnat, honeybee, housefly, ladybird, moth...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Invertebrate</td>\n",
+       "      <td>clam, crab, crayfish, lobster, octopus, scorpi...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Class_Number  Number_Of_Animal_Species_In_Class    Class_Type  \\\n",
+       "0             1                                 41        Mammal   \n",
+       "1             2                                 20          Bird   \n",
+       "2             3                                  5       Reptile   \n",
+       "3             4                                 13          Fish   \n",
+       "4             5                                  4     Amphibian   \n",
+       "5             6                                  8           Bug   \n",
+       "6             7                                 10  Invertebrate   \n",
+       "\n",
+       "                                        Animal_Names  \n",
+       "0  aardvark, antelope, bear, boar, buffalo, calf,...  \n",
+       "1  chicken, crow, dove, duck, flamingo, gull, haw...  \n",
+       "2    pitviper, seasnake, slowworm, tortoise, tuatara  \n",
+       "3  bass, carp, catfish, chub, dogfish, haddock, h...  \n",
+       "4                             frog, frog, newt, toad  \n",
+       "5  flea, gnat, honeybee, housefly, ladybird, moth...  \n",
+       "6  clam, crab, crayfish, lobster, octopus, scorpi...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "23b2b77f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-02T17:39:31.368284Z",
+     "iopub.status.busy": "2023-04-02T17:39:31.367220Z",
+     "iopub.status.idle": "2023-04-02T17:39:31.386929Z",
+     "shell.execute_reply": "2023-04-02T17:39:31.385679Z"
+    },
+    "papermill": {
+     "duration": 0.027115,
+     "end_time": "2023-04-02T17:39:31.389533",
+     "exception": false,
+     "start_time": "2023-04-02T17:39:31.362418",
      "status": "completed"
     },
     "tags": []
@@ -459,15 +621,124 @@
        "9           1  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_df.head(10)\n",
     "test_df.head(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b0c8f73f",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-02T17:39:31.400415Z",
+     "iopub.status.busy": "2023-04-02T17:39:31.399528Z",
+     "iopub.status.idle": "2023-04-02T17:39:31.406735Z",
+     "shell.execute_reply": "2023-04-02T17:39:31.405282Z"
+    },
+    "papermill": {
+     "duration": 0.015283,
+     "end_time": "2023-04-02T17:39:31.409108",
+     "exception": false,
+     "start_time": "2023-04-02T17:39:31.393825",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0          Mammal\n",
+      "1            Bird\n",
+      "2         Reptile\n",
+      "3            Fish\n",
+      "4       Amphibian\n",
+      "5             Bug\n",
+      "6    Invertebrate\n",
+      "Name: Class_Type, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_df['Class_Type'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "1115a36d",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-04-02T17:39:31.419571Z",
+     "iopub.status.busy": "2023-04-02T17:39:31.418649Z",
+     "iopub.status.idle": "2023-04-02T17:39:31.427773Z",
+     "shell.execute_reply": "2023-04-02T17:39:31.426810Z"
+    },
+    "papermill": {
+     "duration": 0.016858,
+     "end_time": "2023-04-02T17:39:31.430152",
+     "exception": false,
+     "start_time": "2023-04-02T17:39:31.413294",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 4, 2, 7, 6, 5, 3])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df[\"class_type\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da4dd7f8",
+   "metadata": {
+    "papermill": {
+     "duration": 0.003952,
+     "end_time": "2023-04-02T17:39:31.438387",
+     "exception": false,
+     "start_time": "2023-04-02T17:39:31.434435",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1803403e",
+   "metadata": {
+    "papermill": {
+     "duration": 0.0038,
+     "end_time": "2023-04-02T17:39:31.446388",
+     "exception": false,
+     "start_time": "2023-04-02T17:39:31.442588",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -490,14 +761,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 12.602924,
-   "end_time": "2023-04-02T16:52:21.209253",
+   "duration": 13.545161,
+   "end_time": "2023-04-02T17:39:32.474901",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-04-02T16:52:08.606329",
+   "start_time": "2023-04-02T17:39:18.929740",
    "version": "2.4.0"
   }
  },
